--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //Implementasi Recycleview
-    implementation 'androidx.recyclerview:recyclerview:1.2.1s'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 }
